feat:组件/指令生命周期用例

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <div id="root" style="width: 100px" style="width: 200px"></div>
+        <div id="root"></div>
     </body>
 
     <script src="./dist/main.js"></script>
