--- a/drag.html
+++ b/drag.html
@@ -1,4 +1,5 @@
 <div style="display: flex; height: 100%">
+    <!-- 菜单区 -->
     <div class="left-menu">
         <div
             id="origin"
@@ -34,11 +35,25 @@
                 <div style="flex: 2" class="dropzone"></div>
             </div>
         </div>
+        <!-- form表单 -->
+        <div
+            id="origin"
+            draggable="true"
+            ondragstart="event.dataTransfer.setData('text/plain',null)"
+        >
+            <div id="block" style="display: inline-block" title="form表单">
+                <div class="dropzone-line">
+                    <span>姓名：</span><input class="" />
+                </div>
+            </div>
+        </div>
     </div>
+    <!-- 视图区 -->
     <div class="content">
         <div class="dropzone"></div>
     </div>
 </div>
+<!-- 侧边配置栏 -->
 <div class="config-menu">
     <div class="close">
         <span>o</span>
@@ -49,6 +64,7 @@
     <div class="tab-body"></div>
     <div class="add-style">+</div>
 </div>
+
 <script>
     var dragged,
         mouse = false,
@@ -361,6 +377,9 @@
     }
     .dropzone {
         background-color: white;
+    }
+    .dropzone-line {
+        display: inline-block;
     }
     .container {
         height: 100%;
