feat:使用block重构完成

--- a/G6View.html
+++ b/G6View.html
@@ -54,7 +54,7 @@
     <div class="tabs">
         <span class="tab">config</span>
     </div>
-    <div class="tab-body"></div>
+    <div class="tab-body" #tabBody></div>
 </div>
 <script src="./g6.min.js"></script>
 <script src="./common//index.js"></script>
