--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <body>
         <div id="root"></div>
     </body>
-
+    <script src="./g6.min.js"></script>
+    <script src="./common//index.js"></script>
+    <script src="./menu/text.js"></script>
+    <script src="./menu/input.js"></script>
+    <script src="./menu/radio.js"></script>
+    <script src="./menu/form/base-form.js"></script>
+    <script src="./menu/container//base/index.js"></script>
+    <script src="./mouse-menu//right-menu/index.js"></script>
     <script src="./dist/main.js"></script>
+    <link href ="./drag.css" rel="stylesheet"></link>
+
 </html>
