feat:定义node的数据config

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <body>
         <div id="root"></div>
     </body>
+    <script>
+        const configModule = {}
+    </script>
     <script src="./g6.min.js"></script>
     <script src="./common//index.js"></script>
     <script src="./menu/text.js"></script>
