feat:node事件连线功能

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>test</title>
+        <link rel="icon" href="../menu/jigsaw-puzzle.svg" type="image/x-icon" />
         <style>
             .container {
                 width: 300px;
@@ -24,15 +25,19 @@
     <script>
         const configModule = {}
     </script>
+    <script src="../block/lib/umd/index.js"></script>
     <script src="./g6.min.js"></script>
-    <script src="./common//index.js"></script>
+    <script src="./common/index.js"></script>
+    <script src="./menu/form/input-box.js"></script>
+    <script src="./menu/button.js"></script>
     <script src="./menu/text.js"></script>
     <script src="./menu/input.js"></script>
     <script src="./menu/radio.js"></script>
     <script src="./menu/form/base-form.js"></script>
-    <script src="./menu/container//base/index.js"></script>
+    <script src="./menu/container/base/index.js"></script>
     <script src="./mouse-menu//right-menu/index.js"></script>
     <script src="./dist/main.js"></script>
+    <link href ="../fragment/common.css" rel="stylesheet"></link>
     <link href ="./drag.css" rel="stylesheet"></link>
 
 </html>
