feat:组件层级劫持/渲染逻辑

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./g6.min.js"></script>
     <script src="./common/index.js"></script>
     <script src="./menu/container/base/index.js"></script>
+    <script src="./menu/node/base/index.js"></script>
     <script src="./menu/form/input-box.js"></script>
     <script src="./menu/button.js"></script>
     <script src="./menu/text.js"></script>
