--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <script src="../block/lib/umd/index.js"></script>
     <script src="./g6.min.js"></script>
     <script src="./common/index.js"></script>
+    <script src="./common/scaleX.js"></script>
+    <script src="./common/scaleY.js"></script>
     <script src="./menu/container/base/index.js"></script>
     <script src="./menu/node/base/index.js"></script>
     <script src="./menu/form/input-box.js"></script>
