--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title>test</title>
         <link rel="icon" href="../menu/jigsaw-puzzle.svg" type="image/x-icon" />
         <style>
+             :root{
+            --button-background-color: #1890ff;
+            --button-color: #FFFFFF;
+            --button-border-color: #1890ff;
+        }
             .container {
                 width: 300px;
                 height: 300px;
@@ -23,9 +28,116 @@
         <div id="root"></div>
     </body>
     <script>
-        const configModule = {}
+        const configModule = {};
     </script>
     <script src="../block/lib/umd/index.js"></script>
+    <script src="../custom-webcomponents/bundle/index.js"></script>
+    <script>
+        with(bundle){
+            class MyDialogModel99 extends MyDialogModel{
+                constructor(){
+                    super();
+                    this.MyTitle = '事件线';
+                    this.init()
+                }
+            }
+            customElements.define('my-dialog-model-99', MyDialogModel99)
+            class MyFor99 extends MyFor{
+                constructor(){
+                    super();
+                    this.options = [
+                    {
+                    id: 'form',
+                    type: 'combo',
+                    title: 'form',
+                    img: '../menu/form.svg',
+                },
+                {
+                    id: 'input',
+                    type: 'node',
+                    title: '输入框',
+                    img: '../menu/input.svg',
+                },
+                {
+                    id: 'radio',
+                    type: 'node',
+                    title: '单选框',
+                    img: '../menu/radio.svg',
+                },
+            ];
+                }
+            }
+            customElements.define('my-for-99', MyFor99)
+            class MyFor88 extends MyFor{
+                constructor(){
+                    super();
+                    this.options = [
+                            {
+                            id: 'input_box',
+                            type: 'combo',
+                            title: '布局容器',
+                            img: '../menu/input-box.svg',
+                        },
+                    ];
+                }
+            }
+            customElements.define('my-for-88', MyFor88)
+            class MyFor77 extends MyFor{
+                constructor(){
+                    super();
+                    this.options = [
+                        {
+                            id: 'dialog',
+                            type: 'combo',
+                            title: 'dialog',
+                            img: '../menu/dialog.svg',
+                        },
+                    ];
+                }
+            }
+            customElements.define('my-for-77', MyFor77)
+            class MyFor00 extends MyFor{
+                constructor(){
+                    super();
+                    this.options = [
+                    {
+                        id: 'text',
+                        type: 'node',
+                        title: '文本',
+                        img: '../menu/text.svg',
+                    },
+                    {
+                        id: 'button',
+                        type: 'node',
+                        title: '按钮',
+                        img: '../menu/button.svg',
+                    },
+                    ];
+                }
+            }
+            customElements.define('my-for-00', MyFor00)
+            class MyFor66 extends MyFor{
+                constructor(){
+                    super();
+                    this.options = [
+                        {
+                            id: 'for',
+                            type: 'combo',
+                            title: 'for',
+                            img: '../menu/for.svg',
+                        },
+                        {
+                            id: 'if',
+                            type: 'combo',
+                            title: 'if',
+                            img: '../menu/if.svg',
+                        },
+                    ];
+                }
+            }
+            customElements.define('my-for-66', MyFor66)
+        }
+    </script>
     <script src="./g6.min.js"></script>
     <script src="./common/index.js"></script>
     <script src="./common/scaleX.js"></script>
@@ -33,6 +145,9 @@
     <script src="./menu/container/base/index.js"></script>
     <script src="./menu/node/base/index.js"></script>
     <script src="./menu/form/input-box.js"></script>
+    <script src="./menu/process/for.js"></script>
+    <script src="./menu/process/if.js"></script>
+    <script src="./menu/dialog/index.js"></script>
     <script src="./menu/button.js"></script>
     <script src="./menu/text.js"></script>
     <script src="./menu/input.js"></script>
